--- a/config.json
+++ b/config.json
@@ -16,10 +16,10 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Silly-B",
-    "PREFIX": "+",
+    "BOTNAME": "SYCO KA BOT 😈",
+    "PREFIX": "/",
     "ADMINBOT": [
-        "100040426712109"
+        "61575836414803"
     ],
     "NDH": [
         "100037743553265"
