--- a/appstate.json
+++ b/appstate.json
@@ -1,75 +1,39 @@
 [
     {
-        "key": "sb",
-        "value": "JazDZ4jjSj3mGmt8-X2Kl0xm",
+        "key": "datr",
+        "value": "QXlmaOL76EwoDwafl_fp_FwV",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
+        "creation": "2025-07-10T22:29:54.457Z",
+        "lastAccessed": "2025-07-10T22:29:54.457Z"
+    },
+    {
+        "key": "sb",
+        "value": "QXlmaNiwn9bSIZweoOt_XsIU",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-07-10T22:29:54.457Z",
+        "lastAccessed": "2025-07-10T22:29:54.457Z"
     },
     {
         "key": "dpr",
-        "value": "1.6815046072006226",
+        "value": "1.5891023874282837",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
-    },
-    {
-        "key": "datr",
-        "value": "DJbiZ3pQpnqVExvWqtYzkkbk",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_GB",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
+        "creation": "2025-07-10T22:29:54.457Z",
+        "lastAccessed": "2025-07-10T22:29:54.457Z"
     },
     {
         "key": "c_user",
-        "value": "61551225242006",
+        "value": "61577831236137",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
-    },
-    {
-        "key": "fr",
-        "value": "1dbIVY5akuLjaBqFr.AWVf5M_IkhIO1o9aOpqP5mezXifysuMq7DVyJg.Bn40Va..AAA.0.0.Bn40Va.AWUSr7lms-0",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
-    },
-    {
-        "key": "xs",
-        "value": "45%3AyIZgaPlhQRV9_Q%3A2%3A1742947100%3A-1%3A5903%3A%3AAcVt-EunigYE_bQ40rApO9f41PHNSWUSw3-VKKTMaQ",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "1.5294095277786255",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
+        "creation": "2025-07-10T22:29:54.457Z",
+        "lastAccessed": "2025-07-10T22:29:54.457Z"
     },
     {
         "key": "ps_l",
@@ -77,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
+        "creation": "2025-07-10T22:29:54.457Z",
+        "lastAccessed": "2025-07-10T22:29:54.457Z"
     },
     {
         "key": "ps_n",
@@ -86,52 +50,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
+        "creation": "2025-07-10T22:29:54.457Z",
+        "lastAccessed": "2025-07-10T22:29:54.457Z"
     },
     {
         "key": "wd",
-        "value": "471x945",
+        "value": "1048x2037",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
+        "creation": "2025-07-10T22:29:54.457Z",
+        "lastAccessed": "2025-07-10T22:29:54.457Z"
     },
     {
-        "key": "x-referer",
-        "value": "eyJyIjoiLyIsImgiOiIvIiwicyI6Im0ifQ%3D%3D",
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1752186526779%2C%22v%22%3A1%7D",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
+        "creation": "2025-07-10T22:29:54.457Z",
+        "lastAccessed": "2025-07-10T22:29:54.457Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2769%3Btimestamp%3A1742947832",
+        "key": "fr",
+        "value": "1HFI1IdmFZGnCs4PP.AWfDItpwnfxwRU4hOYUhLuAL265VWLicrIgcWq4pZS1acwmWZjk.BocD6f..AAA.0.0.BocD6f.AWenNhxqIA0S3QYZqM2acJ0Hb0Q",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
+        "creation": "2025-07-10T22:29:54.457Z",
+        "lastAccessed": "2025-07-10T22:29:54.457Z"
     },
     {
-        "key": "fbl_st",
-        "value": "101427600%3BT%3A29049130",
+        "key": "xs",
+        "value": "22%3AZtfQu07HBaS1cA%3A2%3A1751923105%3A-1%3A-1%3A%3AAcVPM1fI7UUl2b7HCp-oauI3WYjPWbOkYUlGCsBlHA",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B850x424x1.5294095277786255",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-03-26T00:10:37.389Z",
-        "lastAccessed": "2025-03-26T00:10:37.389Z"
+        "creation": "2025-07-10T22:29:54.457Z",
+        "lastAccessed": "2025-07-10T22:29:54.457Z"
     }
 ]
